fern/products/realtime-sdk/pages/v3/guides/voice/setting-up-voicemail.mdx
---
id: 15f7f61e-50c9-47bc-983a-ff9c64f6eca8
title: Setting Up Voicemail
slug: guides/voice/setting-up-voicemail
description: Learn how to record voicemails from your callers when you are unable to take the call.
max-toc-depth: 3
sidebar_custom_props:
  platform: javascript
layout: guide
---

[buy-one]: /platform/phone-numbers/getting-started/buying-a-phone-number
[realtime-sdk-documentation]: /realtime-sdk/

A popular and important use case is recording a voicemail from your callers when you are unable to speak with them. This guide will show how to do exactly that.

In this guide we will see how to implement a voicemail using Node.js. This allows you the most flexibility in case you want to integrate voicemails with complex workflows.

## Assigning a Phone Number to a RELAY Context

To handle calls using Node.js, you should first set up a phone number to handle incoming calls using a RELAY application.

Click the **Phone Numbers** tab on your lefthand side nav within your SignalWire Space, and click the specific number you would like to set up call forwarding on.
If you don't have a number yet, now is the time to [buy one][buy-one]!

<Frame caption = "To configure your number to handle incoming calls with a RELAY application, set 'Handle calls using' to 'RELAY Application', then specify the name of a context (here we choose 'office').">

![the Voice and Fax Settings pane.](/assets/images/dashboard/relay/app_voice_handler.webp)

</Frame>

## Building the application

Our phone number is now configured. Let's see how to build the voicemail with Node.js.

### Installation

First, you need to obtain the Realtime SDK. From your terminal you can run:

```shell npm2yarn
npm install --save @signalwire/realtime-api@~3
```

This will install the Realtime SDK from npm into your project.

### Code

The first thing we need to do is to import the Realtime SDK and initialize a Voice client. We can do it like this:

```js
import { Voice } from "@signalwire/realtime-api";

const client = new Voice.Client({
  project: "<project-id>",
  token: "<api-token>",
  contexts: ["office"],
});
```

We want to execute our logic whenever a call is received. Let's attach an
event handler to the `call.received` event, from which we can answer the call
and play a message:

```js
client.on("call.received", async (call) => {
  console.log("Got call", call.from, call.to);

  await call.answer();

  const tts = await call.playTTS({
    text: "Please leave a message with your name and number at the beep. Press the pound key when finished.",
  });
  await tts.waitForEnded();
});
```

Right after playing the introduction message, we need to start recording. But
before that, let's set up an event listener within the `call.received` handler
which will notify us when the recording has ended:

```js
// inside the "call.received" event handler

call.on("recording.ended", async (rec) => {
  const tts = await call.playTTS({
    text: "Thank you for your message. A member of our team will contact you shortly. Goodbye!",
  });
  await tts.waitForEnded();

  console.log("Recording URL:", rec.url);

  await call.hangup();
});
```

We can finally start the recording. Since we also want the recording to be no
more than 15 seconds long, we will set a timeout which will stop it if it didn't
already end.

```js
const recording = await call.recordAudio({
  endSilenceTimeout: 0,
  terminators: "#",
});

// Stop the recording after 15 seconds.
setTimeout(() => recording.stop(), 15000);
```

Putting all of the parts together, here is the full code:

<Accordion title="index.js">

```js title="index.js"
import { Voice } from "@signalwire/realtime-api";

const client = new Voice.Client({
  project: "<project-id>",
  token: "<api-token>",
  contexts: ["office"],
});

client.on("call.received", async (call) => {
  console.log("Got call", call.from, call.to);

  await call.answer();

  const tts = await call.playTTS({
    text: "Please leave a message with your name and number at the beep. Press the pound key when finished.",
  });
  await tts.waitForEnded();

  // Callback to be executed when the recording ends.
  call.on("recording.ended", async (rec) => {
    const tts = await call.playTTS({
      text: "Thank you for your message. A member of our team will contact you shortly. Goodbye!",
    });
    await tts.waitForEnded();

    console.log("Recording URL:", rec.url);

    await call.hangup();
  });

  const recording = await call.recordAudio({
    endSilenceTimeout: 0,
    terminators: "#",
  });

  // Stop the recording after 15 seconds.
  setTimeout(() => recording.stop(), 15000);
});

console.log("Started.");
```

</Accordion>

## Wrapping up

The Realtime SDK allows you to build powerful applications with a simple API.
You are not limited to phone calls: you can also control messaging, chat, video,
and more. See all available options in the [Realtime SDK documentation][realtime-sdk-documentation].